# cloudkernel

./: README.md  compile_user.sh  user.ld
ck-crosscall/: Cargo.toml
ck-crosscall/src/: consts.rs  crosscall.rs  debug.rs  lib.rs  poll.rs  process.rs  service.rs
ck-fork-test/: Cargo.toml
ck-fork-test/src/: main.rs
ck-hal/: Cargo.toml  Xargo.toml  link.sh  x86_64-cloudkernel.json
ck-hal/src/: crosscall.rs  debug.rs  lib.rs
ck-hypervisor/: CMakeLists.txt  sandbox.ld
ck-hypervisor/include/ck-hypervisor/: bqueue.h  byteutils.h  config.h  consts.h  external.h  fdset.h  file_base.h  iomap.h  linking.h  memory_layout.h  message.h  metadata.h  module.h  network.h  owned_message.h  process.h  process_api.h  profile.h  registry.h  relocation.h  round.h  shmem.h  snapshot.h  snapshot_base.h  symbol.h  syscall.h
ck-hypervisor/sandbox/: cc.cpp  cc.h  kernel.cpp  kernel.h  sandbox.cpp  snapshot_parser.cpp  snapshot_parser.h
ck-hypervisor/src/: config.cpp  external.cpp  fdset.cpp  iomap.cpp  linking.cpp  main.cpp  message.cpp  network.cpp  process.cpp  process_message.cpp  profile.cpp  registry.cpp  shmem.cpp  snapshot.cpp
ck-init/: Cargo.toml  build.sh  link.ld  link.sh
ck-init/src/: lib.rs  linux.rs
ck-migration/: Cargo.toml  link.sh
ck-migration/src/: lib.rs
ck-net-test/: Cargo.toml
ck-net-test/src/: main.rs
ck-runtime/: Cargo.toml
ck-runtime-preload/: Cargo.toml
ck-runtime-preload/src/: lib.rs
ck-runtime/src/: hook.rs  ip.rs  ipc.rs  lib.rs  net.rs  poll.rs  process.rs  snapshot.rs  tangle.rs  timer.rs
ck-threading-test/: Cargo.toml
examples/: hello_world.c
examples/count/: Cargo.toml
examples/count/src/: main.rs
examples/entangle-test/: Cargo.toml
examples/entangle-test/src/: main.rs
examples/snapshot-test/: Cargo.toml
examples/snapshot-test/src/: main.rs
examples/threading-test/: Cargo.toml
examples/threading-test/src/: main.rs
include.user/ck/: crosscall.h  debug.h  import.h  message.h  polyfill.h  process.h
rust_target_spec/: x86_64-cloudkernel.json
scripts/: elf2ckm.py
shell/: Cargo.toml
shell/src/: main.rs
