[package]
name = "ck-hal"
version = "0.1.0"
authors = ["losfair <zhy20000919@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0"

[dependencies.byteorder]
version = "1.3"
default-features = false

[dependencies.wee_alloc]
path = "../../wee_alloc_ck/wee_alloc"
features = ["default", "generic_mmap_backend"]
