[package]
name = "ck-init"
version = "0.1.0"
authors = ["losfair <zhy20000919@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
ck-crosscall = { path = "../ck-crosscall" }
sc = "0.2"

[dependencies.num_enum]
version = "0.4"
default-features = false

[dependencies.byteorder]
version = "1.3"
default-features = false

[dependencies.wee_alloc]
path = "../../wee_alloc_ck/wee_alloc"
features = ["default", "generic_mmap_backend"]
