[package]
name = "ck-migration"
version = "0.1.0"
authors = ["losfair <zhy20000919@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
ck-crosscall = { path = "../ck-crosscall" }
rlibc = "1.0"

[dependencies.wee_alloc]
path = "../../wee_alloc_ck/wee_alloc"
features = ["default", "generic_mmap_backend"]
