[package]
name = "ck-runtime"
version = "0.1.0"
authors = ["losfair <zhy20000919@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.15"
libc = "0.2"
sc = "0.2"
packet = "0.1"
num_enum = "0.4"
byteorder = "1.3"
